--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "bunyan": "^1.8.12",
     "cls-hooked": "^4.2.2",
+    "got": "^9.6.0",
     "node-schedule": "^1.3.2"
   }
 }
