--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "standard": "^12.0.1"
   },
   "dependencies": {
+    "@kth/canvas-api": "^2.0.0",
     "bunyan": "^1.8.12",
     "cls-hooked": "^4.2.2",
+    "dotenv": "^8.0.0",
     "got": "^9.6.0",
     "node-schedule": "^1.3.2"
   }
