--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "MIT",
   "devDependencies": {
     "ava": "^2.2.0",
+    "create-test-server": "^3.0.1",
     "nodemon": "^1.19.1",
     "standard": "^12.0.1"
   },
