--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "bunyan": "^1.8.12",
     "cls-hooked": "^4.2.2",
     "dotenv": "^8.0.0",
+    "fast-csv": "^3.1.0",
     "got": "^9.6.0",
-    "node-schedule": "^1.3.2"
+    "node-schedule": "^1.3.2",
+    "tempy": "^0.3.0"
   }
 }
