--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ava": "^2.2.0",
     "create-test-server": "^3.0.1",
     "nodemon": "^1.19.1",
+    "proxyquire": "^2.1.1",
     "standard": "^12.0.1"
   },
   "dependencies": {
