--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^8.0.0",
     "fast-csv": "^3.1.0",
     "got": "^9.6.0",
+    "ldapjs": "^1.0.2",
     "node-schedule": "^1.3.2",
     "tempy": "^0.3.0"
   }
