--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bunyan": "^1.8.12",
     "cls-hooked": "^4.2.2",
     "dotenv": "^8.0.0",
+    "express": "^4.17.1",
     "fast-csv": "^3.1.0",
     "got": "^9.6.0",
     "ldapjs": "^1.0.2",
