--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@kth/canvas-api": "^2.1.0-beta.2",
     "bunyan": "^1.8.12",
     "cls-hooked": "^4.2.2",
+    "cuid": "^2.1.6",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "fast-csv": "^3.1.0",
