--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "express": "^4.17.1",
     "fast-csv": "^3.1.0",
     "got": "^9.6.0",
-    "ldapjs": "^1.0.2",
+    "ldapts": "^1.9.0",
     "node-schedule": "^1.3.2",
     "tempy": "^0.3.0"
   }
