--- a/docker-compose-unit-tests.yml
+++ b/docker-compose-unit-tests.yml
@@ -11,4 +11,6 @@ services:
       - ./node_modules:/node_modules
 
     tty: true
-    command: npm install && npm run test:all
+    command: >
+      sh -c "npm install &&
+             npm run test:all"
