--- a/docker-compose-unit-tests.yml
+++ b/docker-compose-unit-tests.yml
@@ -1,16 +1,17 @@
 version: '3.2'
 
 services:
-  web:
+  unit_tests:
     build: .
-    image: $LOCAL_IMAGE_ID
 
-    # Install dependencies in the current container for test.
-    # Not in the original image
+    # We are setting "/usr/src/testdir" as current directory
+    # to not manipulate the image contents with testing elements.
     volumes:
-      - ./node_modules:/node_modules
+      - ./:/usr/src/testdir
 
-    tty: true
+    tty: false
     command: >
-      sh -c "npm install &&
-             npm run test:all"
+      sh -c "cd /usr/src/testdir &&
+             apk add --update openssl &&
+             npm install &&
+             npm run test:all" 
