--- a/.env.in
+++ b/.env.in
@@ -1,6 +1,4 @@
-
-#Credentials
-#NOTE THAT HERE, CANVAS API IS POINTING TO TEST
+# Credentials and URIs for external services (Canvas, UG, Kopps)
 CANVAS_API_URL=https://kth.test.instructure.com/api/v1
 CANVAS_API_TOKEN=
 UG_URL=ldaps://ldap.ug.kth.se
@@ -8,15 +6,26 @@ UG_USERNAME=system-lms-integration@ug.kth.se
 UG_PASSWORD=
 KOPPS_API_URL=https://www.kth.se/api/kopps/v2/
 
-#Run Interval - scheduled time when the antagna sync will happen. For example "0 5 * * *" means 5:00AM.
-#INTERVAL = 0 5 * * *
+# PERIOD specifies the Period for which students will be enrolled.
+# Additionally, students from previous period will be UN-enrolled.
+#   For example, if PERIOD is set to "2019-HT-P1" (meaning Year 2019, Autumn
+#   Term, Period 1), antagna students from previous period (in this case P0)
+#   will be unenrolled, and antagna students from period P1, will be enrolled.
+PERIOD=2019-HT-P1
 
-#PERIOD specifies the Period for which users will be enrolled. Automatically, users from previous period will be UN-enrolled.
-#For example 2019-HT-P1 -> Year 2019, Autumn Term, Period 1.
-#Users from previous period (in this case Period 0) will be unenrolled, and users from period specified -> Period 1, will be enrolled.
-#PERIOD = 2019-HT-P1
+# From this point, all the environmental variables are optional
+# Uncomment the lines that with the variables you want to set
 
-#Level of logging - choose level of detail when logging
-#LOG_LEVEL = info
+#   Scheduled time when the antagna sync will happen.
+#   For example "0 5 * * *" means "every day at 5:00AM".
+#   See https://crontab.guru/ for more info.
+# INTERVAL=0 5 * * *
 
-#PROXY_PATH=
+#   Level of logging. Accepted values are the ones accepted by the Bunynan library
+# LOG_LEVEL=info
+
+#   Path to be a prefix for all the endpoints.
+# PROXY_PATH=/lms-antagna
+
+#   Which port to run the app
+# PORT=3000
