--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
       "config/version.js"
     ]
   },
+  "prettier": "prettier-config-standard",
   "devDependencies": {
     "ava": "^2.2.0",
     "create-test-server": "^3.0.1",
     "nodemon": "^1.19.1",
+    "prettier": "1.18.2",
+    "prettier-config-standard": "^1.0.1",
     "proxyquire": "^2.1.1",
     "standard": "^12.0.1"
   },
