--- a/package.json
+++ b/package.json
@@ -22,9 +22,8 @@
     "ava": "^2.2.0",
     "create-test-server": "^3.0.1",
     "nodemon": "^1.19.1",
-    "prettier": "1.18.2",
-    "proxyquire": "^2.1.1",
-    "standard": "^12.0.1"
+    "prettier-standard": "15.0.1",
+    "proxyquire": "^2.1.1"
   },
   "dependencies": {
     "@hapi/joi": "^15.1.1",
