--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start": "NODE_ENV=production node .",
     "start:dev": "NODE_ENV=development npx nodemon . | bunyan -o short",
-    "format": "prettier-standard \"**/*.js\"",
-    "test": "prettier-standard --lint --check \"**/*.js\" && ava",
+    "format": "prettier-standard \"**/*.{js,md,yml,json}\"",
+    "test": "prettier-standard --lint --check \"**/*.{js,md,yml,json}\" && ava",
     "test:all": "npm test && npx @kth/lms-scan history"
   },
   "keywords": [],
