--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "@hapi/joi": "^15.1.1",
     "@kth/canvas-api": "^2.1.0-beta.2",
     "bunyan": "^1.8.12",
-    "cls-hooked": "^4.2.2",
     "cuid": "^2.1.6",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
@@ -37,6 +36,7 @@
     "got": "^9.6.0",
     "ldapts": "^1.9.0",
     "node-schedule": "^1.3.2",
+    "skog": "^1.0.0-alpha.1",
     "tempy": "^0.3.0"
   }
 }
