--- a/package.json
+++ b/package.json
@@ -28,9 +28,10 @@
   "dependencies": {
     "@hapi/joi": "^15.1.1",
     "@kth/canvas-api": "^2.1.0-beta.2",
+    "@kth/reqvars": "^2.0.1",
     "bunyan": "^1.8.12",
     "cuid": "^2.1.6",
-    "dotenv": "^8.0.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "fast-csv": "^3.1.0",
     "got": "^9.6.0",
