--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "NODE_ENV=production node .",
-    "start:dev": "NODE_ENV=development nodemon . | bunyan -o short",
+    "dev": "NODE_ENV=development nodemon . | bunyan -o short",
     "format": "prettier-standard \"**/*.{js,md,yml,json}\"",
     "test": "prettier-standard --lint --check \"**/*.{js,md,yml,json}\" && ava",
     "test:all": "npm test && npx @kth/lms-scan history"
