--- a/package.json
+++ b/package.json
@@ -19,23 +19,23 @@
     ]
   },
   "devDependencies": {
-    "ava": "^2.2.0",
+    "ava": "^2.4.0",
     "create-test-server": "^3.0.1",
-    "nodemon": "^1.19.1",
+    "nodemon": "^2.0.3",
     "prettier-standard": "15.0.1",
-    "proxyquire": "^2.1.1"
+    "proxyquire": "^2.1.3"
   },
   "dependencies": {
     "@hapi/joi": "^15.1.1",
-    "@kth/canvas-api": "^2.1.0-beta.2",
+    "@kth/canvas-api": "^2.1.1",
     "@kth/reqvars": "^2.0.1",
     "bunyan": "^1.8.12",
-    "cuid": "^2.1.6",
+    "cuid": "^2.1.8",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "fast-csv": "^3.1.0",
+    "fast-csv": "^3.7.0",
     "got": "^9.6.0",
-    "ldapts": "^1.9.0",
+    "ldapts": "^1.10.0",
     "node-schedule": "^1.3.2",
     "skog": "^1.0.0-alpha.1",
     "tempy": "^0.3.0"
