Update info of "PERIOD" env var

--- a/.env.in
+++ b/.env.in
@@ -6,11 +6,17 @@ UG_USERNAME=system-lms-integration@ug.kth.se
 UG_PASSWORD=
 KOPPS_API_URL=https://www.kth.se/api/kopps/v2/
 
-# PERIOD specifies the Period for which students will be enrolled.
-# Additionally, students from previous period will be UN-enrolled.
+# PERIOD specifies the first Period for which students will be enrolled.
+# Students from the specified period and the following four will be enrolled
+# Additionally, students from five previous periods will be un-enrolled.
+#
 #   For example, if PERIOD is set to "2019-HT-P1" (meaning Year 2019, Autumn
-#   Term, Period 1), antagna students from previous period (in this case P0)
-#   will be unenrolled, and antagna students from period P1, will be enrolled.
+#   Term, Period 1) students from the following five periods will be enrolled:
+#   2019-HT-P1, 2019-HT-P2, 2020-VT-P3, 2020-VT-P4, 2020-VT-P5
+#
+#   And students from the following five periods will be un-enrolled:
+#   2019-HT-P0, 2019-VT-P5, 2019-VT-P4, 2019-VT-P3, 2018-HT-P2
+#
 PERIOD=2019-HT-P1
 
 # From this point, all the environmental variables are optional
